syntax = "proto3";

option java_package = "org.pipelineframework.search.grpc";

import "tokenize-content-svc.proto";


message IndexAck {
  string docId = 4;
  string indexVersion = 5;
  string indexedAt = 6;
  bool success = 7;
}

service ProcessIndexDocumentService {
  rpc remoteProcess(TokenBatch) returns (IndexAck);
}

service ObservePersistenceIndexAckSideEffectService {
  rpc remoteProcess(IndexAck) returns (IndexAck);
}

service ObserveCacheInvalidateIndexAckSideEffectService {
  rpc remoteProcess(IndexAck) returns (IndexAck);
}

service ObserveCacheInvalidateAllIndexAckSideEffectService {
  rpc remoteProcess(IndexAck) returns (IndexAck);
}
